tools/flowc/tests/errors/error11.flow
import string;

// Test on detection of local variable re-declaration 

fun1() -> int {
	x = 5;
	(\x, y -> x + y)(x, 1)
}
